--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,9 @@
         }
     ],
     "web_accessible_resources": [
-        "style.css",
-        "fonts/nasin-nanpa-3.1.0.otf"
+        {
+            "resources": ["fonts/nasin-nanpa-3.1.0.otf"],
+            "matches": ["<all_urls>"]
+        }
     ]
 }
